[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/heavy-shot-particle.png" type="Texture" id=1]
[ext_resource path="res://actors/shots/shot.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="Curve" id=2]
max_value = 0.7
_data = [ Vector2( 0, 0.7 ), 0.0, -0.7, 0, 1, Vector2( 1, 0 ), -0.7, 0.0, 1, 0 ]

[sub_resource type="CircleShape2D" id=3]

[node name="HeavyShot" type="KinematicBody2D" groups=[
"shot",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 300.0
range_ = 300.0
type = "Heavy"

[node name="Yellow" type="CPUParticles2D" parent="."]
amount = 32
lifetime = 0.2
local_coords = false
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 1 )
color = Color( 0.941176, 0.909804, 0.458824, 1 )

[node name="White" type="CPUParticles2D" parent="."]
amount = 32
lifetime = 0.2
local_coords = false
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 178

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Hitbox" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_body_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="destroy"]
